--- a/notebooks/supermarket_eda.ipynb
+++ b/notebooks/supermarket_eda.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
-    "\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
     "\n",
     "from rich import inspect\n",
     "from tqdm.notebook import tqdm\n",
@@ -22,99 +23,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_no</th>\n",
-       "      <th>location</th>\n",
-       "      <th>dow</th>\n",
-       "      <th>time</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>timestamp</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-09-03 16:14:00</th>\n",
-       "      <td>802_tuesday</td>\n",
-       "      <td>checkout</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>16:14:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-09-06 15:53:00</th>\n",
-       "      <td>846_friday</td>\n",
-       "      <td>spices</td>\n",
-       "      <td>friday</td>\n",
-       "      <td>15:53:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-09-05 11:24:00</th>\n",
-       "      <td>473_thursday</td>\n",
-       "      <td>checkout</td>\n",
-       "      <td>thursday</td>\n",
-       "      <td>11:24:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-09-04 19:17:00</th>\n",
-       "      <td>1275_wednesday</td>\n",
-       "      <td>spices</td>\n",
-       "      <td>wednesday</td>\n",
-       "      <td>19:17:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-09-06 15:43:00</th>\n",
-       "      <td>819_friday</td>\n",
-       "      <td>spices</td>\n",
-       "      <td>friday</td>\n",
-       "      <td>15:43:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        customer_no  location        dow      time\n",
-       "timestamp                                                         \n",
-       "2019-09-03 16:14:00     802_tuesday  checkout    tuesday  16:14:00\n",
-       "2019-09-06 15:53:00      846_friday    spices     friday  15:53:00\n",
-       "2019-09-05 11:24:00    473_thursday  checkout   thursday  11:24:00\n",
-       "2019-09-04 19:17:00  1275_wednesday    spices  wednesday  19:17:00\n",
-       "2019-09-06 15:43:00      819_friday    spices     friday  15:43:00"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "## Load Data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "days_of_week = [\"monday\", \"tuesday\", \"wednesday\", \"thursday\", \"friday\"]\n",
     "\n",
@@ -140,20 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(datetime.time(7, 0), datetime.time(21, 50))"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_all_days.time.min(), df_all_days.time.max()\n"
    ]
@@ -163,12 +72,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding the period of day column, for analyzing data in an aggregate manner:"
+    "## Adding the period of day column, for analyzing data in an aggregate manner:\n",
+    "- morning: up to 12 pm\n",
+    "- afternoon: 12 to 4 pm \n",
+    "- evening: after 4 pm "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,109 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_no</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>location</th>\n",
-       "      <th>dow</th>\n",
-       "      <th>time</th>\n",
-       "      <th>day_period</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>39223</th>\n",
-       "      <td>638_wednesday</td>\n",
-       "      <td>2019-09-04 13:11:00</td>\n",
-       "      <td>dairy</td>\n",
-       "      <td>wednesday</td>\n",
-       "      <td>13:10:00</td>\n",
-       "      <td>afternoon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35005</th>\n",
-       "      <td>528_tuesday</td>\n",
-       "      <td>2019-09-03 13:19:00</td>\n",
-       "      <td>fruit</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>13:19:00</td>\n",
-       "      <td>afternoon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46964</th>\n",
-       "      <td>825_tuesday</td>\n",
-       "      <td>2019-09-03 16:26:00</td>\n",
-       "      <td>dairy</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>16:22:00</td>\n",
-       "      <td>evening</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46453</th>\n",
-       "      <td>811_monday</td>\n",
-       "      <td>2019-09-02 15:53:00</td>\n",
-       "      <td>spices</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>15:53:00</td>\n",
-       "      <td>afternoon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3001</th>\n",
-       "      <td>1071_friday</td>\n",
-       "      <td>2019-09-06 18:06:00</td>\n",
-       "      <td>fruit</td>\n",
-       "      <td>friday</td>\n",
-       "      <td>18:05:00</td>\n",
-       "      <td>evening</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         customer_no           timestamp location        dow      time   \n",
-       "39223  638_wednesday 2019-09-04 13:11:00    dairy  wednesday  13:10:00  \\\n",
-       "35005    528_tuesday 2019-09-03 13:19:00    fruit    tuesday  13:19:00   \n",
-       "46964    825_tuesday 2019-09-03 16:26:00    dairy    tuesday  16:22:00   \n",
-       "46453     811_monday 2019-09-02 15:53:00   spices     monday  15:53:00   \n",
-       "3001     1071_friday 2019-09-06 18:06:00    fruit     friday  18:05:00   \n",
-       "\n",
-       "      day_period  \n",
-       "39223  afternoon  \n",
-       "35005  afternoon  \n",
-       "46964    evening  \n",
-       "46453  afternoon  \n",
-       "3001     evening  "
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_all_days = (\n",
     "    df_all_days.groupby(\"customer_no\")\n",
@@ -328,25 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66810322fb3b455cbef50dcbdf051cf8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/7445 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# TODO: add an initial entry per customer for the \"entrance\" location.\n",
+    "\n",
+    "\n",
     "missing_checkout_entries = (\n",
     "    []\n",
     ")  # -- to be filled with the dicts of missing entries:\n",
@@ -368,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,115 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_no</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>to_location</th>\n",
-       "      <th>dow</th>\n",
-       "      <th>time</th>\n",
-       "      <th>day_period</th>\n",
-       "      <th>from_location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000_friday</td>\n",
-       "      <td>2019-09-06 17:19:00</td>\n",
-       "      <td>fruit</td>\n",
-       "      <td>friday</td>\n",
-       "      <td>17:19:00</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>entrance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1000_friday</td>\n",
-       "      <td>2019-09-06 17:20:00</td>\n",
-       "      <td>checkout</td>\n",
-       "      <td>friday</td>\n",
-       "      <td>17:20:00</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>fruit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1000_monday</td>\n",
-       "      <td>2019-09-02 17:44:00</td>\n",
-       "      <td>dairy</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>17:44:00</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>entrance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1000_monday</td>\n",
-       "      <td>2019-09-02 17:45:00</td>\n",
-       "      <td>dairy</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>17:44:00</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>dairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1000_monday</td>\n",
-       "      <td>2019-09-02 17:46:00</td>\n",
-       "      <td>dairy</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>17:44:00</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>dairy</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   customer_no           timestamp to_location     dow      time day_period   \n",
-       "0  1000_friday 2019-09-06 17:19:00       fruit  friday  17:19:00    evening  \\\n",
-       "1  1000_friday 2019-09-06 17:20:00    checkout  friday  17:20:00    evening   \n",
-       "2  1000_monday 2019-09-02 17:44:00       dairy  monday  17:44:00    evening   \n",
-       "3  1000_monday 2019-09-02 17:45:00       dairy  monday  17:44:00    evening   \n",
-       "4  1000_monday 2019-09-02 17:46:00       dairy  monday  17:44:00    evening   \n",
-       "\n",
-       "  from_location  \n",
-       "0      entrance  \n",
-       "1         fruit  \n",
-       "2      entrance  \n",
-       "3         dairy  \n",
-       "4         dairy  "
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_all_days[\"from_location\"] = (\n",
     "    df_all_days[\"location\"]\n",
@@ -512,12 +206,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = \"../data/cleaned_data.csv\"\n",
-    "df_all_days.to_csv(path, index=False)"
+    "df_all_days.to_csv(path, index=False)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA - General view of the number of customers per section "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entire Week overview (all data),  per period: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_overview_per_section_per_period = (\n",
+    "    df_all_days.groupby([\"to_location\", \"day_period\"])\n",
+    "    .timestamp.count()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"timestamp\": \"customers\"})\n",
+    ")\n",
+    "week_overview_per_section_per_period\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_overview_per_section_per_period.query(\n",
+    "    \" day_period == 'afternoon' \"\n",
+    ").customers.values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = dict(\n",
+    "    xaxis=dict(showgrid=False),\n",
+    "    yaxis=dict(showgrid=False),\n",
+    "    paper_bgcolor=\"rgba(0,0,0,0)\",\n",
+    "    plot_bgcolor=\"rgba(0,0,0,0)\",\n",
+    "    title_x=0.5,\n",
+    "    font=dict(color=\"white\"),\n",
+    ")\n",
+    "\n",
+    "title = \"Count of customers per location and period of day\"\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "locations = week_overview_per_section_per_period.to_location.unique().tolist()\n",
+    "day_periods = [\"morning\", \"afternoon\", \"evening\"]\n",
+    "\n",
+    "for period in day_periods:\n",
+    "    fig.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=locations,\n",
+    "            y=week_overview_per_section_per_period.query(\n",
+    "                f\" day_period == '{period}' \"\n",
+    "            ).customers.values,\n",
+    "            name=period,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "# Here we modify the tickangle of the xaxis, resulting in rotated labels.\n",
+    "fig.update_layout(\n",
+    "    **layout, barmode=\"group\", xaxis_tickangle=-45, title_text=title\n",
+    ")\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entire Week overview (all data), per hour of the day: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all_days[\"hour_of_day\"] = df_all_days.timestamp.dt.hour\n",
+    "\n",
+    "week_overview_per_section_per_hour = (\n",
+    "    df_all_days.groupby([\"to_location\", \"hour_of_day\"])\n",
+    "    .timestamp.count()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"timestamp\": \"customers\"})\n",
+    ")\n",
+    "week_overview_per_section_per_hour.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all_days.sample(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = dict(\n",
+    "    paper_bgcolor=\"rgba(0,0,0,0)\",\n",
+    "    plot_bgcolor=\"rgba(0,0,0,0)\",\n",
+    "    title_x=0.1,\n",
+    "    font=dict(color=\"white\"),\n",
+    ")\n",
+    "\n",
+    "fig = make_subplots(\n",
+    "    rows=len(locations),\n",
+    "    cols=1,\n",
+    "    subplot_titles=locations,\n",
+    "    shared_xaxes=True,\n",
+    "    shared_yaxes=True,\n",
+    ")\n",
+    "\n",
+    "for i, location in enumerate(locations):\n",
+    "    df = week_overview_per_section_per_hour.query(\n",
+    "        f\" to_location == '{location}' \"\n",
+    "    )\n",
+    "    fig.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=df.hour_of_day.values,\n",
+    "            y=df.customers.values,\n",
+    "            name=location,\n",
+    "            text=df.customers.values,\n",
+    "            textposition=\"auto\",\n",
+    "        ),\n",
+    "        row=i + 1,\n",
+    "        col=1,\n",
+    "    )\n",
+    "\n",
+    "title = \"Count of customers per location and hour of day\"\n",
+    "\n",
+    "y_max = week_overview_per_section_per_hour.customers.max()\n",
+    "\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    **layout,\n",
+    "    title_text=title,\n",
+    "    height=1000,\n",
+    "    showlegend=False,\n",
+    "    # 1\n",
+    "    xaxis=dict(showgrid=False),\n",
+    "    yaxis=dict(showgrid=False, range=[0, y_max]),\n",
+    "    # 2\n",
+    "    xaxis2=dict(showgrid=False),\n",
+    "    yaxis2=dict(showgrid=False, range=[0, y_max]),\n",
+    "    # 3\n",
+    "    xaxis3=dict(showgrid=False),\n",
+    "    yaxis3=dict(showgrid=False, range=[0, y_max]),\n",
+    "    # 4\n",
+    "    xaxis4=dict(showgrid=False),\n",
+    "    yaxis4=dict(showgrid=False, range=[0, y_max]),\n",
+    "    # 5\n",
+    "    xaxis5=dict(showgrid=False),\n",
+    "    yaxis5=dict(showgrid=False, range=[0, y_max]),\n",
+    ")\n",
+    "\n",
+    "fig.show()\n"
    ]
   },
   {
